# eicr-parsing-spike

./: README.md  main.py  output.xml  pyproject.toml  standard_lib.py  xpath.py
schematron/: eve_everywoman.xml  iso_schematron_skeleton_for_saxon.xsl  iso_schematron_skeleton_for_xslt1.xsl  iso_svrl_for_xslt1.xsl  iso_svrl_for_xslt2.xsl  schema.sch
